--- a/static/2020/img/FILEdiARUBA/css/index.css
+++ b/static/2020/img/FILEdiARUBA/css/index.css
@@ -1472,7 +1472,7 @@ body{
 width: 100%;
 height: 900px;
 background-size: cover;
-background: red;
+background: black;
 display: flex;
 justify-content: center;
 }
